--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,14 @@
+     <!--Navigation Bar-->
+    <nav class="navbar navbar-light bg-light d-flex">
+      <div class="container">
+        <div class="m-auto">
+          <form class="form-inline search-form">
+            <input class="form-control mr-sm-2" type="search" placeholder="search your cocktail" aria-label="Search">
+          </form>
+        </div>
+      </div>
+    </nav>
+
   <div class="banner-content">
     <div class="row justify-content-center mt-3"
     <h1>Cocktails</h1>
@@ -19,3 +30,15 @@
     <% end %>
   </div>
 </div>
+
+ <!--Footer-->
+    <footer class="container footer">
+      <nav class="navbar d-flex">
+        <ul>
+          <li>ABOUT US
+          </li>
+          <li>SUPPORT</li>
+        </ul>
+        <p> © 2019 MY COCKTAIL </p>
+      </nav>
+    </footer>
